bfs routing for cars + some basic inputs